#11 and some of 12

--- a/JavaScript30-master/12 - Key Sequence Detection/index-START.html
+++ b/JavaScript30-master/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 <script>
+	const pressed = [];
+	const secret = 'kurt';
+
+	window.addEventListener('keyup', (e) => {
+		console.log(e.key)
+	})
 </script>
 </body>
 </html>
